// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Menu Disabled should render a Layout when huge 1`] = `
<ContentContainer
  fill={true}
  header={
    <div
      layoutConfig={
        {
          "menuIsOpen": false,
          "size": "huge",
          "toggleMenu": undefined,
        }
      }
    >
      Test Header
    </div>
  }
  setFocusOnContainer={false}
>
  <LayoutSlidePanel
    isAnimated={true}
    isOpen={false}
    isToggleEnabled={false}
    onToggle={[Function]}
    panelBehavior="squish"
    panelContent={null}
    size="huge"
  >
    <ContentContainer
      className="content-container"
      fill={true}
      header={false}
      setFocusOnContainer={false}
    >
      <div
        layoutConfig={
          {
            "menuIsOpen": false,
            "size": "huge",
            "toggleMenu": undefined,
          }
        }
      >
        Test Content
      </div>
    </ContentContainer>
  </LayoutSlidePanel>
</ContentContainer>
`;

exports[`Layout Menu Disabled should render a Layout when large 1`] = `
<ContentContainer
  fill={true}
  header={
    <div
      layoutConfig={
        {
          "menuIsOpen": false,
          "size": "large",
          "toggleMenu": undefined,
        }
      }
    >
      Test Header
    </div>
  }
  setFocusOnContainer={false}
>
  <LayoutSlidePanel
    isAnimated={true}
    isOpen={false}
    isToggleEnabled={false}
    onToggle={[Function]}
    panelBehavior="squish"
    panelContent={null}
    size="large"
  >
    <ContentContainer
      className="content-container"
      fill={true}
      header={false}
      setFocusOnContainer={false}
    >
      <div
        layoutConfig={
          {
            "menuIsOpen": false,
            "size": "large",
            "toggleMenu": undefined,
          }
        }
      >
        Test Content
      </div>
    </ContentContainer>
  </LayoutSlidePanel>
</ContentContainer>
`;

exports[`Layout Menu Disabled should render a Layout when medium 1`] = `
<ContentContainer
  fill={true}
  header={
    <div
      layoutConfig={
        {
          "menuIsOpen": false,
          "size": "medium",
          "toggleMenu": undefined,
        }
      }
    >
      Test Header
    </div>
  }
  setFocusOnContainer={false}
>
  <LayoutSlidePanel
    isAnimated={true}
    isOpen={false}
    isToggleEnabled={false}
    onToggle={[Function]}
    panelBehavior="squish"
    panelContent={null}
    size="medium"
  >
    <ContentContainer
      className="content-container"
      fill={true}
      header={false}
      setFocusOnContainer={false}
    >
      <div
        layoutConfig={
          {
            "menuIsOpen": false,
            "size": "medium",
            "toggleMenu": undefined,
          }
        }
      >
        Test Content
      </div>
    </ContentContainer>
  </LayoutSlidePanel>
</ContentContainer>
`;

exports[`Layout Menu Disabled should render a Layout when small 1`] = `
<ContentContainer
  fill={true}
  header={false}
  setFocusOnContainer={false}
>
  <LayoutSlidePanel
    isAnimated={true}
    isOpen={false}
    isToggleEnabled={false}
    onToggle={[Function]}
    panelBehavior="overlay"
    panelContent={null}
    size="small"
  >
    <ContentContainer
      className="content-container"
      fill={true}
      header={
        <div
          layoutConfig={
            {
              "menuIsOpen": false,
              "size": "small",
              "toggleMenu": undefined,
            }
          }
        >
          Test Header
        </div>
      }
      setFocusOnContainer={false}
    >
      <div
        layoutConfig={
          {
            "menuIsOpen": false,
            "size": "small",
            "toggleMenu": undefined,
          }
        }
      >
        Test Content
      </div>
    </ContentContainer>
  </LayoutSlidePanel>
</ContentContainer>
`;

exports[`Layout Menu Disabled should render a Layout when tiny 1`] = `
<ContentContainer
  fill={true}
  header={false}
  setFocusOnContainer={false}
>
  <LayoutSlidePanel
    isAnimated={true}
    isOpen={false}
    isToggleEnabled={false}
    onToggle={[Function]}
    panelBehavior="overlay"
    panelContent={null}
    size="tiny"
  >
    <ContentContainer
      className="content-container"
      fill={true}
      header={
        <div
          layoutConfig={
            {
              "menuIsOpen": false,
              "size": "tiny",
              "toggleMenu": undefined,
            }
          }
        >
          Test Header
        </div>
      }
      setFocusOnContainer={false}
    >
      <div
        layoutConfig={
          {
            "menuIsOpen": false,
            "size": "tiny",
            "toggleMenu": undefined,
          }
        }
      >
        Test Content
      </div>
    </ContentContainer>
  </LayoutSlidePanel>
</ContentContainer>
`;

exports[`Layout Menu Enabled should render a Layout when huge 1`] = `
<ContentContainer
  fill={true}
  header={
    <div
      layoutConfig={
        {
          "menuIsOpen": true,
          "size": "huge",
          "toggleMenu": undefined,
        }
      }
    >
      Test Header
    </div>
  }
  setFocusOnContainer={false}
>
  <LayoutSlidePanel
    isAnimated={true}
    isOpen={true}
    isToggleEnabled={false}
    onToggle={[Function]}
    panelBehavior="squish"
    panelContent={
      <div
        layoutConfig={
          {
            "menuIsOpen": true,
            "menuIsPinned": undefined,
            "size": "huge",
            "toggleMenu": undefined,
          }
        }
      >
        Test Menu
      </div>
    }
    size="huge"
    toggleText="Menu Text"
  >
    <ContentContainer
      className="content-container"
      fill={true}
      header={false}
      setFocusOnContainer={false}
    >
      <div
        layoutConfig={
          {
            "menuIsOpen": true,
            "size": "huge",
            "toggleMenu": undefined,
          }
        }
      >
        Test Content
      </div>
    </ContentContainer>
  </LayoutSlidePanel>
</ContentContainer>
`;

exports[`Layout Menu Enabled should render a Layout when large 1`] = `
<ContentContainer
  fill={true}
  header={
    <div
      layoutConfig={
        {
          "menuIsOpen": true,
          "size": "large",
          "toggleMenu": undefined,
        }
      }
    >
      Test Header
    </div>
  }
  setFocusOnContainer={false}
>
  <LayoutSlidePanel
    isAnimated={true}
    isOpen={true}
    isToggleEnabled={false}
    onToggle={[Function]}
    panelBehavior="squish"
    panelContent={
      <div
        layoutConfig={
          {
            "menuIsOpen": true,
            "menuIsPinned": undefined,
            "size": "large",
            "toggleMenu": undefined,
          }
        }
      >
        Test Menu
      </div>
    }
    size="large"
    toggleText="Menu Text"
  >
    <ContentContainer
      className="content-container"
      fill={true}
      header={false}
      setFocusOnContainer={false}
    >
      <div
        layoutConfig={
          {
            "menuIsOpen": true,
            "size": "large",
            "toggleMenu": undefined,
          }
        }
      >
        Test Content
      </div>
    </ContentContainer>
  </LayoutSlidePanel>
</ContentContainer>
`;

exports[`Layout Menu Enabled should render a Layout when medium 1`] = `
<ContentContainer
  fill={true}
  header={
    <div
      layoutConfig={
        {
          "menuIsOpen": true,
          "size": "medium",
          "toggleMenu": undefined,
        }
      }
    >
      Test Header
    </div>
  }
  setFocusOnContainer={false}
>
  <LayoutSlidePanel
    isAnimated={true}
    isOpen={true}
    isToggleEnabled={false}
    onToggle={[Function]}
    panelBehavior="squish"
    panelContent={
      <div
        layoutConfig={
          {
            "menuIsOpen": true,
            "menuIsPinned": undefined,
            "size": "medium",
            "toggleMenu": undefined,
          }
        }
      >
        Test Menu
      </div>
    }
    size="medium"
    toggleText="Menu Text"
  >
    <ContentContainer
      className="content-container"
      fill={true}
      header={false}
      setFocusOnContainer={false}
    >
      <div
        layoutConfig={
          {
            "menuIsOpen": true,
            "size": "medium",
            "toggleMenu": undefined,
          }
        }
      >
        Test Content
      </div>
    </ContentContainer>
  </LayoutSlidePanel>
</ContentContainer>
`;

exports[`Layout Menu Enabled should render a Layout when small 1`] = `
<ContentContainer
  fill={true}
  header={false}
  setFocusOnContainer={false}
>
  <LayoutSlidePanel
    isAnimated={true}
    isOpen={false}
    isToggleEnabled={false}
    onToggle={[Function]}
    panelBehavior="overlay"
    panelContent={
      <div
        layoutConfig={
          {
            "menuIsOpen": false,
            "menuIsPinned": undefined,
            "size": "small",
            "toggleMenu": [Function],
          }
        }
      >
        Test Menu
      </div>
    }
    size="small"
    toggleText="Menu Text"
  >
    <ContentContainer
      className="content-container"
      fill={true}
      header={
        <div
          layoutConfig={
            {
              "menuIsOpen": false,
              "size": "small",
              "toggleMenu": [Function],
            }
          }
        >
          Test Header
        </div>
      }
      setFocusOnContainer={false}
    >
      <div
        layoutConfig={
          {
            "menuIsOpen": false,
            "size": "small",
            "toggleMenu": [Function],
          }
        }
      >
        Test Content
      </div>
    </ContentContainer>
  </LayoutSlidePanel>
</ContentContainer>
`;

exports[`Layout Menu Enabled should render a Layout when tiny 1`] = `
<ContentContainer
  fill={true}
  header={false}
  setFocusOnContainer={false}
>
  <LayoutSlidePanel
    isAnimated={true}
    isOpen={false}
    isToggleEnabled={false}
    onToggle={[Function]}
    panelBehavior="overlay"
    panelContent={
      <div
        layoutConfig={
          {
            "menuIsOpen": false,
            "menuIsPinned": undefined,
            "size": "tiny",
            "toggleMenu": [Function],
          }
        }
      >
        Test Menu
      </div>
    }
    size="tiny"
    toggleText="Menu Text"
  >
    <ContentContainer
      className="content-container"
      fill={true}
      header={
        <div
          layoutConfig={
            {
              "menuIsOpen": false,
              "size": "tiny",
              "toggleMenu": [Function],
            }
          }
        >
          Test Header
        </div>
      }
      setFocusOnContainer={false}
    >
      <div
        layoutConfig={
          {
            "menuIsOpen": false,
            "size": "tiny",
            "toggleMenu": [Function],
          }
        }
      >
        Test Content
      </div>
    </ContentContainer>
  </LayoutSlidePanel>
</ContentContainer>
`;

exports[`Layout should render a Layout with custom props 1`] = `
<ContentContainer
  data-test-attr="test-val"
  fill={true}
  header={false}
  setFocusOnContainer={false}
>
  <LayoutSlidePanel
    isAnimated={true}
    isOpen={false}
    isToggleEnabled={false}
    onToggle={[Function]}
    panelBehavior="overlay"
    panelContent={null}
    size="tiny"
  >
    <ContentContainer
      className="content-container"
      fill={true}
      header={null}
      setFocusOnContainer={false}
    />
  </LayoutSlidePanel>
</ContentContainer>
`;

exports[`Layout should render a Layout without optional props 1`] = `
<ContentContainer
  fill={true}
  header={false}
  setFocusOnContainer={false}
>
  <LayoutSlidePanel
    isAnimated={true}
    isOpen={false}
    isToggleEnabled={false}
    onToggle={[Function]}
    panelBehavior="overlay"
    panelContent={null}
    size="tiny"
  >
    <ContentContainer
      className="content-container"
      fill={true}
      header={null}
      setFocusOnContainer={false}
    />
  </LayoutSlidePanel>
</ContentContainer>
`;
